--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
@@ -28,6 +28,6 @@
     [colorScheme]="'transparent-light'"
     [buttonSizeX]="'small'"
     [buttonSizeY]="'small'"
-    (click)="openAddAccountModalService()"
+    (click)="openAddAccountModalService(); $event.stopPropagation()"
   ></app-button>
 </div>
