moved currency and lang services to data module

--- a/src/app/modules/auth/components/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/components/auth-page/auth-page.component.html
@@ -3,7 +3,7 @@
 <app-button
   [iconName]="'google'"
   [colorScheme]="'green'"
-  [text]="buildTranslationKey('signInWithGoogle') | translate"
+  [text]="'Sign in with Google'"
   [loading]="authLoading$ | async"
   [buttonSizeX]="'large'"
   (click)="googleLogin()"
