--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -22,6 +22,15 @@
       }
     </mat-form-field>
 
+    <custom-select
+      [label]="buildTranslationKey('accountsTitle') | translate"
+      [formControlName]="formFieldsEnum.AccountToUse"
+      [options]="accounts"
+      [idSelector]="idSelector"
+      [displayValueSelector]="displayValueSelector"
+      [iconSelector]="iconSelector"
+    ></custom-select>
+
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('noteTitle') | translate }}</mat-label>
       <textarea matInput rows="3" [formControlName]="formFieldsEnum.Note"></textarea>
@@ -30,16 +39,6 @@
         <mat-error>{{ 'formErrors.noteTooLong' | translate }}</mat-error>
       }
     </mat-form-field>
-
-    <mat-radio-group class="mt-4" [formControlName]="formFieldsEnum.AccountToUse">
-      <div class="flex flex-col px-4 font-main text-charcoal text-base">
-        <mat-label>{{ buildTranslationKey('accountsTitle') | translate }}</mat-label>
-
-        @for (account of accounts; track account.id) {
-          <mat-radio-button [disableRipple]="true" [value]="account.id">{{ account.name }}</mat-radio-button>
-        }
-      </div>
-    </mat-radio-group>
   </form>
 </app-base-modal>
 
