--- a/src/app/modules/design-system/components/custom-select/custom-select.component.html
+++ b/src/app/modules/design-system/components/custom-select/custom-select.component.html
@@ -3,8 +3,8 @@
   <mat-select [disableRipple]="true" [formControl]="formControl" (ngModelChange)="valueChanged($event)">
     <mat-select-trigger>
       <span class="flex justify-start items-center text-charcoal gap-x-1.5 font-main">
-        <svg-icon [iconName]="iconSelector(formControl.value)"></svg-icon>
-        <span>{{ displayValueSelector(formControl.value) }}</span>
+        <svg-icon [iconName]="formControl.value && iconSelector(formControl.value)"></svg-icon>
+        <span>{{ formControl.value && displayValueSelector(formControl.value) }}</span>
       </span>
     </mat-select-trigger>
 
