current month balance

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
@@ -9,7 +9,7 @@
   <app-info-card
     [iconName]="'creditcard-folder'"
     [iconColorClass]="'text-dark-green'"
-    [colorScheme]="'green'"
+    [colorScheme]="'dark-green'"
     [primaryText]="buildTranslationKey(accountsAmount ? 'titleWithAmount' : 'title') | translate: { accountsAmount }"
   >
   </app-info-card>
