--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/full-balance-info-card/full-balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/full-balance-info-card/full-balance-info-card.component.html
@@ -2,7 +2,7 @@
   [iconBgClass]="'bg-light-blue'"
   [iconName]="'equal-sign'"
   [primaryText]="fullBalance$ | async | currencySymbol"
-  [secondaryText]="buildTranslationKey('fullBalance') | translate"
+  [secondaryText]="buildTranslationKey('title') | translate"
   [tooltip]="tooltip"
 ></app-info-card>
 
