--- a/src/app/modules/design-system/components/info-card/info-card.component.scss
+++ b/src/app/modules/design-system/components/info-card/info-card.component.scss
@@ -23,8 +23,26 @@
     }
   }
 
-  &.green {
+  &.dark-green {
     @apply bg-dark-green;
+
+    .primary,
+    .secondary {
+      @apply text-white;
+    }
+  }
+
+  &.green {
+    @apply bg-green;
+
+    .primary,
+    .secondary {
+      @apply text-white;
+    }
+  }
+
+  &.red {
+    @apply bg-red;
 
     .primary,
     .secondary {
