--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -8,7 +8,8 @@
 <div class="info-cards">
   <app-income-info-card class="card"></app-income-info-card>
   <app-expense-info-card class="card"></app-expense-info-card>
-  <app-balance-info-card class="card"></app-balance-info-card>
+  <app-current-month-balance-info-card class="card"></app-current-month-balance-info-card>
+  <app-full-balance-info-card class="card"></app-full-balance-info-card>
   <app-accounts-info-card class="card"></app-accounts-info-card>
 </div>
 
