--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -1,6 +1,11 @@
 <div class="absolute right-2 top-2 flex flex-col gap-1 items-center">
   @if (menuActions?.length) {
-    <app-menu [colorScheme]="menuColorScheme" [menuActions]="menuActions" [menuDisabled]="shouldDisableMenu"></app-menu>
+    <app-menu
+      [colorScheme]="menuColorScheme"
+      [menuActions]="menuActions"
+      [menuDisabled]="shouldDisableMenu"
+      [loading]="menuLoading"
+    ></app-menu>
   }
 
   @if (tooltip) {
@@ -16,13 +21,15 @@
 ></svg-icon-with-bg>
 
 <div class="flex flex-1 flex-col" [style.color]="hexTextColor">
-  <span class="primary font-main font-bold {{ twoLine ? 'text-sm' : 'text-xl' }}"> {{ primaryText }}&nbsp; </span>
-  <span class="secondary font-main {{ twoLine ? 'text-xs' : 'text-sm' }}">{{ secondaryText }}</span>
+  @if (primaryText) {
+    <span class="primary font-main font-bold text-xl"> {{ primaryText }}</span>
+  }
 
-  @if (twoLine) {
-    <div class="flex flex-1 flex-col mt-2">
-      <span class="primary font-main font-bold text-sm">{{ additionalPrimaryText }}</span>
-      <span class="secondary font-main text-xs">{{ additionalSecondaryText }}</span>
-    </div>
+  @if (secondaryText) {
+    <span class="secondary font-main text-sm">{{ secondaryText }}</span>
+  }
+
+  @if (tertiaryText) {
+    <span class="secondary font-main text-xs">{{ tertiaryText }}</span>
   }
 </div>
