restructure for translation files

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
@@ -3,5 +3,5 @@
   [iconColorClass]="'text-red'"
   [iconName]="'arrow-down'"
   [primaryText]="expense$ | async | currencySymbol"
-  [secondaryText]="buildTranslationKey('title') | translate"
+  [secondaryText]="'dashboard.infoCards.expense' | translate"
 ></app-info-card>
