--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
@@ -3,5 +3,5 @@
   [iconColorClass]="'text-dark-green'"
   [iconName]="'arrow-up'"
   [primaryText]="income$ | async | currencySymbol"
-  [secondaryText]="buildTranslationKey('title') | translate"
+  [secondaryText]="'dashboard.infoCards.income' | translate"
 ></app-info-card>
