--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/current-month-balance-info-card/current-month-balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/current-month-balance-info-card/current-month-balance-info-card.component.html
@@ -5,5 +5,5 @@
   [iconColorClass]="currentMonthBalance === 0 ? 'text-charcoal' : currentMonthBalance > 0 ? 'text-green' : 'text-red'"
   [colorScheme]="currentMonthBalance === 0 ? 'white' : currentMonthBalance > 0 ? 'green' : 'red'"
   [primaryText]="currentMonthBalance | currencySymbol"
-  [secondaryText]="buildTranslationKey('title') | translate"
+  [secondaryText]="'dashboard.infoCards.currentMonthBalance' | translate"
 ></app-info-card>
