--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -20,7 +20,7 @@
   [iconName]="iconName"
 ></svg-icon-with-bg>
 
-<div class="flex flex-1 flex-col" [style.color]="hexTextColor">
+<div class="flex flex-1 flex-col">
   @if (primaryText) {
     <span class="primary font-main font-bold text-xl"> {{ primaryText }}</span>
   }
