--- a/src/app/modules/design-system/components/info-icon/info-icon.component.html
+++ b/src/app/modules/design-system/components/info-icon/info-icon.component.html
@@ -1,7 +1,7 @@
 <svg-icon
   customTooltip
   class="cursor-pointer"
-  [position]="tooltipPosition"
+  [position]="[tooltipPosition]"
   [tooltipText]="stringTooltip"
   [tooltipTemplate]="templateTooltip"
   [iconName]="icon"
