--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -15,7 +15,7 @@
 <app-button
   customTooltip
   [tooltipText]="buildTranslationKey('itemTooltip.logout') | translate"
-  [position]="'right'"
+  [position]="['right']"
   [tooltipBgColor]="'green'"
   [dontDisplayOnScreenWidth]="true"
   [iconName]="'logout'"
