--- a/src/app/modules/dashboard/components/language-switcher/language-switcher.component.html
+++ b/src/app/modules/dashboard/components/language-switcher/language-switcher.component.html
@@ -1,7 +1,7 @@
 <app-menu
   customTooltip
   [tooltipText]="buildTranslationKey('tooltip') | translate"
-  [position]="'left'"
+  [position]="['left']"
   [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions"
   [icon]="icon"
