--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -2,7 +2,7 @@
   <app-button
     customTooltip
     [tooltipText]="item.tooltipTranslationKey | translate"
-    [position]="'right'"
+    [position]="['right']"
     [tooltipBgColor]="'green'"
     [dontDisplayOnScreenWidth]="true"
     [iconName]="item.iconName"
