--- a/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
@@ -65,7 +65,7 @@
       [iconName]="form.controls[formFields.AccountIcon].value"
       [hexBgColor]="form.controls[formFields.AccountBgColor].value || '#F0F2F2'"
       [hexTextColor]="form.controls[formFields.AccountTextColor].value || '#2C4251'"
-      [shouldUseCssStyles]="true"
+      [shouldUseCustomColors]="true"
     ></app-info-card>
   </form>
 </app-base-modal>
