--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/current-month-balance-info-card/current-month-balance-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/current-month-balance-info-card/current-month-balance-info-card.component.html
@@ -1,6 +1,6 @@
 <app-info-card
   *ngVar="currentMonthBalance$ | async as currentMonthBalance"
-  [iconName]="'equal-sign'"
+  [iconName]="'calendar-dot-grid'"
   [iconBgClass]="currentMonthBalance === 0 ? 'bg-light-blue' : 'bg-white'"
   [iconColorClass]="currentMonthBalance === 0 ? 'text-charcoal' : currentMonthBalance > 0 ? 'text-green' : 'text-red'"
   [colorScheme]="currentMonthBalance === 0 ? 'white' : currentMonthBalance > 0 ? 'green' : 'red'"
