--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -2,7 +2,7 @@
   mat-button
   [matMenuTriggerFor]="menu"
   [iconName]="icon"
-  [colorScheme]="colorScheme"
+  [colorScheme]="resolveColorScheme"
   [buttonSizeY]="buttonSizeY"
   [buttonSizeX]="buttonSizeX"
   [text]="text"
