--- a/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
@@ -5,7 +5,7 @@
     [primaryText]="primaryText"
     [secondaryText]="isAccountWithForeignCurrency ? accountValueInBaseCurrency : account.name"
     [tertiaryText]="isAccountWithForeignCurrency ? account.name : null"
-    [shouldUseCssStyles]="true"
+    [shouldUseCustomColors]="true"
     [hexBgColor]="account.bgColor"
     [hexTextColor]="account.textColor"
     [menuActions]="menuActions"
