--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.scss
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.scss
@@ -1,14 +1,20 @@
 :host {
-  .wrapper {
-    .tip {
-      transform: translateY(100%);
-      transition: transform ease-in-out 0.15s;
-    }
-
-    &:hover {
+  @media (min-width: 481px) {
+    .wrapper {
       .tip {
-        transform: translateY(0);
+        transform: translateY(100%);
+        transition: transform ease-in-out 0.15s;
+      }
+
+      &:hover {
+        .tip {
+          transform: translateY(0);
+        }
       }
     }
+  }
+
+  .tip {
+    transform: translateY(0);
   }
 }
