--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -1,10 +1,12 @@
 <div class="absolute right-2 top-2 flex flex-col gap-1 items-center">
   @if (menuActions?.length) {
     <app-menu
+      [style.color]="hexTextColor"
       [colorScheme]="menuColorScheme"
       [menuActions]="menuActions"
       [menuDisabled]="shouldDisableMenu"
       [loading]="menuLoading"
+      [shouldUseCurrentColor]="shouldUseCustomColors"
     ></app-menu>
   }
 
