--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -8,6 +8,7 @@
   [text]="text"
   [disabled]="menuDisabled"
   [loading]="loading"
+  [shouldUseCurrentColor]="shouldUseCurrentColor"
 ></app-button>
 
 <mat-menu #menu="matMenu">
