--- a/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-x-2 items-start w-full">
+<div class="w-full relative">
   <app-info-card
     class="flex-1"
     [iconName]="account.icon"
@@ -11,4 +11,16 @@
     [menuActions]="menuActions"
     [menuLoading]="isAccountRemoving$ | async"
   ></app-info-card>
+
+  <app-button
+    cdkDragHandle
+    class="drag-button absolute right-2 top-12"
+    [style.color]="account.textColor"
+    [buttonSizeX]="'small'"
+    [buttonSizeY]="'small'"
+    [iconName]="'drag-handle'"
+    [colorScheme]="null"
+    [shouldUseCurrentColor]="true"
+    [disabled]="shouldDisableDragButton"
+  ></app-button>
 </div>
