navbar size on mobile, text fix

--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -1,4 +1,9 @@
-<a class="link" [routerLink]="item.routerLink" [routerLinkActive]="'active'" #routerLinkActive="routerLinkActive">
+<a
+  class="link"
+  [routerLink]="item.routerLink"
+  [routerLinkActive]="'active'"
+  #routerLinkActive="routerLinkActive"
+>
   <app-button
     customTooltip
     [tooltipText]="item.tooltipTranslationKey | translate"
@@ -7,7 +12,7 @@
     [dontDisplayOnScreenWidth]="true"
     [iconName]="item.iconName"
     [colorScheme]="routerLinkActive.isActive ? 'active-navigation-item' : 'transparent-light'"
-    [buttonSizeY]="'small'"
-    [buttonSizeX]="'small'"
+    [buttonSizeY]="'medium'"
+    [buttonSizeX]="'medium'"
   ></app-button>
 </a>
