--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -14,7 +14,7 @@
   }
 
   @media (max-width: 480px) {
-    @apply flex-row justify-between w-full h-12 px-4 py-0;
+    @apply flex-row justify-between w-full h-14 max-h-14 px-4 py-0;
 
     .nav-container {
       @apply w-auto h-full flex-row gap-x-4;
