--- a/src/app/modules/dashboard/modules/info-cards/components/accounts-list-modal/accounts-list-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/accounts-list-modal/accounts-list-modal.component.html
@@ -24,8 +24,8 @@
       ></app-account-card>
     }
 
-    @if (changeOrderInProgress$ | async) {
-      <app-fullsize-loader [colorMode]="'light'"></app-fullsize-loader>
+    @if (true) {
+      <app-fullsize-loader [colorMode]="'light'" [placement]="'start'"></app-fullsize-loader>
     }
   </div>
 </app-base-modal>
