--- a/src/app/modules/dashboard/modules/info-cards/components/accounts-list-modal/accounts-list-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/accounts-list-modal/accounts-list-modal.component.html
@@ -24,7 +24,7 @@
       ></app-account-card>
     }
 
-    @if (true) {
+    @if (changeOrderInProgress$ | async) {
       <app-fullsize-loader [colorMode]="'light'" [placement]="'start'"></app-fullsize-loader>
     }
   </div>
